# graphsearch

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
clients/typescript/: README.md  codegen.ts  package-lock.json  package.json  schema.graphql  tsconfig.json
clients/typescript/src/: index.ts  operations.graphql
data/example_docs/: password_faq.md  returns_policy.md  shipping_info.md
graphsearch/: __init__.py  __main__.py  chunking.py  config.py  db.py  embeddings.py  extract.py  ingest.py  llm.py  main.py  rag.py  schema.py  vectorstore.py
graphsearch/static/: index.html
tests/: conftest.py  pdf_fixture.py  test_chunking.py  test_extract.py  test_graphql.py  test_llm.py  test_local_embedder.py  test_retrieval.py
